--- a/apt_delivery_app/templates/home/elements/header.html
+++ b/apt_delivery_app/templates/home/elements/header.html
@@ -77,6 +77,14 @@
                                     <span class="material-icons"> admin_panel_settings</span>
                                 </a>
                             </li>
+                            <li class="">
+                                <a class="dropdown-item d-flex align-items-center"
+                                   href="/admin_app"
+                                   target="_blank">
+                                    СвояАдминПанель
+                                    <span class="material-icons"> admin_panel_settings</span>
+                                </a>
+                            </li>
                             {% elif request.user.is_deliver %}
                             <li class="">
                                 <a class="dropdown-item d-flex align-items-center"
