--- a/apt_delivery_app/templates/home/elements/footer.html
+++ b/apt_delivery_app/templates/home/elements/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<footer class="container mt-auto">
+<footer class="mt-auto">
     <nav class="navbar navbar-expand-lg bg-primary rounded" data-bs-theme="dark">
         <div class="container-fluid">
             <span class="float-end "><a href="#" class="nav-link text-white">Вверх</a></span>
