--- a/apt_delivery_app/templates/registration/login.html
+++ b/apt_delivery_app/templates/registration/login.html
@@ -1,19 +1,15 @@
 {% extends 'home/base.html' %}
 {% load static %}
+{% load django_bootstrap5 %}
 {% block title %}Главная{% endblock %}
 {% block content %}
-
 <div class="d-flex justify-content-center  ">
-    <form class="d-flex flex-column w-100 px-5 py-4 rounded-2 shadow bg-white ajaxForm" method="POST" style="max-width: 500px;">
-        {% if error %}
-        <p>{{ error }}</p>
-        {% endif %}
+    <form class="d-flex flex-column w-100 px-5 py-4 rounded-2 shadow bg-white ajaxForm needs-validation" method="POST" style="max-width: 500px;" novalidate>
         {% csrf_token %}
-        {{ form.as_p }}
+        {% bootstrap_form form %}
         <div class="d-flex justify-content-end">
             <button class="w-100 btn btn-lg btn-primary checkFormBtn" type="submit">Войти</button>
         </div>
     </form>
 </div>
-<script src="{% static 'js/log_reg/script.js'%}"></script>
 {% endblock %}
