--- a/apt_delivery_app/templates/home/elements/header.html
+++ b/apt_delivery_app/templates/home/elements/header.html
@@ -111,7 +111,7 @@
                             {% elif user.is_operator %}
                             <li class="">
                                 <a class="dropdown-item d-flex align-items-center"
-                                   href="{% url 'deliver'%}">Оператор
+                                   href="{% url 'operator_orders'%}">Оператор
                                     <span class="bi bi-person-workspace"></span>
                                 </a>
                             </li>
