--- a/apt_delivery_app/templates/deliver/elements/deliver_order_item.html
+++ b/apt_delivery_app/templates/deliver/elements/deliver_order_item.html
@@ -3,8 +3,8 @@
 {% include 'deliver/elements/deliver_order_header.html' %}
 {% endblock %}
 {% block order %}{% endblock %}
-{% block order_meal %}
-{% for meal in order.meals %}
-{% include 'order/elements/order_item_meals.html'%}
-{% endfor %}
-{% endblock%}
+<!--{% block order_meal %}-->
+<!--{% for meal in order.meals %}-->
+<!--{% include 'order/elements/order_item_meals.html'%}-->
+<!--{% endfor %}-->
+<!--{% endblock%}-->
