--- a/apt_delivery_app/templates/operator/elements/deliver_order_header.html
+++ b/apt_delivery_app/templates/operator/elements/deliver_order_header.html
@@ -33,11 +33,31 @@
     </tbody>
 </table>
 
-{% if 'order_list' in request.path %}
+{% if 'order_list' in request.path  %}
+{% if user.is_deliver %}
 <button class="take_order btn btn-primary" data-id="{{order.id}}">Взять</button>
+{% elif user.is_operator %}
+<div id="order-actions">
+    {% if order.status.code == 'new' %}
+        <button class="confirm-order btn btn-success" data-order-id="{{ order.id }}">
+            Подтвердить
+        </button>
+        <button class="cancel-order btn btn-danger" data-order-id="{{ order.id }}">
+            Отменить
+        </button>
+    {% elif order.status == 'confirmed' %}
+        <button class="cancel-order btn btn-danger" data-order-id="{{ order.id }}">
+            Отменить
+        </button>
+    {% endif %}
+</div>
+{% endif %}
+
 {% elif 'deliver_order' in request.path %}
 
 {% if order.status.id == 6 %}
 <button class="delivered btn btn-primary" data-id="{{order.id}}">Изменить на доставлен</button>
 {% endif %}
+
+
 {% endif %}
