--- a/apt_delivery_app/templates/operator/order_list.html
+++ b/apt_delivery_app/templates/operator/order_list.html
@@ -1,15 +1,15 @@
 {% extends 'home/base.html' %}
 {% load static %}
-{% block title %}Главная{% endblock %}
+{% block title %}{{title}}{% endblock %}
 {% block extra_head %}
 <link rel="stylesheet" href="{% static 'css/deliver/style.css' %}">
 {% endblock %}
 {% block content %}
 {% include 'order/elements/modal.html' %}
 <div class="d-flex justify-content-between flex-wrap align-items-center">
-    <h2 class=" ps-0  px-3 py-2">Отправка заказов</h2>
+    <h2 class=" ps-0  px-3 py-2">{{title}}</h2>
 </div>
-<p>Всего <span id="count">{{count}}</span> заказов</p>
+<p>Всего <span id="count">{{orders|length}}</span> заказов</p>
 <div class="d-flex flex-wrap align-items-center justify-content-between  z-1 rounded-2 overflow-hidden     mb-4"
      style="top: 80px;">
     <div class="mb-1">Сортировать по</div>
@@ -52,4 +52,6 @@
 <script src="{% static 'js/order/order_view_close.js' %}"></script>
 <script src="{% static 'js/deliver/script.js' %}"></script>
 <script src="{% static 'js/deliver/order_modal.js' %}"></script>
+<script src="{% static 'js/operator/csrf_cookie.js' %}"></script>
+<script src="{% static 'js/operator/confirm_order.js' %}"></script>
 {% endblock %}
