--- a/admin_app/templates/admin_app/list/cabinet_list.html
+++ b/admin_app/templates/admin_app/list/cabinet_list.html
@@ -8,7 +8,7 @@
 {% block h1 %}
 <div class="d-flex justify-content-between align-items-center">
     <h1>{{title_plural}}</h1>
-    <a href="{% url 'meal-add' %}" class="btn btn-primary ">Добавить</a>
+    <a href="add" class="btn btn-primary ">Добавить</a>
 </div>
 {% endblock%}
 
