--- a/admin_app/templates/admin_app/elements/header.html
+++ b/admin_app/templates/admin_app/elements/header.html
@@ -8,12 +8,13 @@
             </button>
             <a class="navbar-brand d-flex align-items-center" href="{% url 'admin_home' %}">АдминАптДоставка <span
                     class="material-icons"> admin_panel_settings</span></a>
-
+{% if filter %}
             <button aria-controls="navbarOffcanvasLg" aria-label="Toggle navigation" class="navbar-toggler"
                     data-bs-target="#filter_models"
                     data-bs-toggle="offcanvas" type="button">
                 <i class="bi bi-funnel"></i>
             </button>
+            {% endif %}
             <div class="form-inline order-lg-3">
                 <ul class="navbar-nav d-flex flex-row align-items-center justify-content-center">
                     {% if request.user.is_authenticated %}
