--- a/apt_delivery_app/templates/home/base.html
+++ b/apt_delivery_app/templates/home/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}{% endblock %}</title>
     {% block head%}{% endblock %}
     <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/home/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/home/home_style.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap-icons-1.11.3/font/bootstrap-icons.css'%}">
     <script defer src="{% static 'js/home/dragscroll.js' %}"></script>
     <script src="{% static 'js/home/jquery-3.7.1.js' %}"></script>
