--- a/apt_delivery_app/templates/operator/order_list.html
+++ b/apt_delivery_app/templates/operator/order_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}{{title}}{% endblock %}
 {% block extra_head %}
-<link rel="stylesheet" href="{% static 'css/deliver/style.css' %}">
+<link rel="stylesheet" href="{% static 'css/deliver/deliver_style.css' %}">
 {% endblock %}
 {% block content %}
 {% include 'order/elements/modal.html' %}
