--- a/admin_app/templates/admin_app/menu_edit.html
+++ b/admin_app/templates/admin_app/menu_edit.html
@@ -123,5 +123,5 @@
 {% endblock %}
 
 {% block extra_body %}
-<script src="{% static 'menu_edit.js %}"></script>
+<script src="{% static 'admin_app/menu_edit.js' %}"></script>
 {% endblock %}
