--- a/apt_delivery_app/templates/home/elements/header.html
+++ b/apt_delivery_app/templates/home/elements/header.html
@@ -86,18 +86,18 @@
                         <ul class="dropdown-menu position-absolute dropdown-menu-end">
                             {% if user.is_authenticated %}
                             {% if user.is_superuser %}
-                            <li class="">
-                                <a class="dropdown-item d-flex align-items-center"
-                                   href="/admin"
-                                   target="_blank">
-                                    АдминПанель
-                                    <span class="material-icons"> admin_panel_settings</span>
-                                </a>
-                            </li>
+<!--                            <li class="">-->
+<!--                                <a class="dropdown-item d-flex align-items-center"-->
+<!--                                   href="/admin"-->
+<!--                                   >-->
+<!--                                    АдминПанель-->
+<!--                                    <span class="material-icons"> admin_panel_settings</span>-->
+<!--                                </a>-->
+<!--                            </li>-->
                             <li class="">
                                 <a class="dropdown-item d-flex align-items-center"
                                    href="/admin_app"
-                                   target="_blank">
+                                   >
                                     СвояАдминПанель
                                     <span class="material-icons"> admin_panel_settings</span>
                                 </a>
