--- a/admin_app/templates/admin_app/elements/header.html
+++ b/admin_app/templates/admin_app/elements/header.html
@@ -41,7 +41,7 @@
                                 <a class="dropdown-item d-flex align-items-center"
                                    href="/admin_app"
                                    >
-                                    СвояАдминПанель
+                                    АдминПанель
                                     <span class="material-icons"> admin_panel_settings</span>
                                 </a>
                             </li>
