--- a/apt_delivery_app/templates/order/elements/order_item.html
+++ b/apt_delivery_app/templates/order/elements/order_item.html
@@ -34,15 +34,15 @@
                         </div>
                     </div>
                     <span class="col-auto fs-4">
-                                <div class="row row-cols-1 text-end">
-                                    <div class="col ">
-                                        {{order.cab}}
-                                    </div>
-                                    <div class="col">
-                                        на {{ order.order_date }} <i class="bi bi-clock"></i>
-                                    </div>
-                                </div>
-                            </span>
+                        <div class="row row-cols-1 text-end">
+                            <div class="col order-cab">
+                                {{order.cab}}
+                            </div>
+                            <div class="col order-time">
+                                на <span>{{ order.order_date }}</span> <i class="bi bi-clock"></i>
+                            </div>
+                        </div>
+                    </span>
                     {% if order.deliver%}
                     <div class="deliver-info col-12">
                         <div class="row">
@@ -52,7 +52,7 @@
                     {% endif%}
                     <div class="col-12">
                         {% if order.user_comment %}
-                        <p>Ваш комментарий: {{order.user_comment}}</p>
+                        <p class="order-comment">Ваш комментарий: <span>{{order.user_comment}}</span></p>
                         {% endif %}
                         {% if order.result %}
                         <p>
