--- a/apt_delivery_app/templates/deliver/take_order_list.html
+++ b/apt_delivery_app/templates/deliver/take_order_list.html
@@ -28,6 +28,6 @@
     </div>
 </div>
 {% include 'deliver/elements/deliver_order_item.html'%}
-<script src="{% static 'js/order/order_view_close.js' %}"></script>
+<!--<script src="{% static 'js/order/order_view_close.js' %}"></script>-->
 <script src="{% static 'js/deliver/script.js' %}"></script>
 {% endblock %}
