--- a/apt_delivery_app/templates/operator/order_list.html
+++ b/apt_delivery_app/templates/operator/order_list.html
@@ -49,7 +49,7 @@
 
 {% endblock %}
 {% block extra_body %}
-<script src="{% static 'js/order/order_view_close.js' %}"></script>
+<!--<script src="{% static 'js/order/order_view_close.js' %}"></script>-->
 <script src="{% static 'js/deliver/script.js' %}"></script>
 <script src="{% static 'js/deliver/order_modal.js' %}"></script>
 <script src="{% static 'js/operator/csrf_cookie.js' %}"></script>
