--- a/apt_delivery_app/templates/order/index.html
+++ b/apt_delivery_app/templates/order/index.html
@@ -67,7 +67,7 @@
     let url_remove = "{% url 'remove_from_cart' %}"
 
 </script>
-<script src="{% static 'js/order/order_view_close.js' %}"></script>
+<!--<script src="{% static 'js/order/order_view_close.js' %}"></script>-->
 
 <script src="{% static 'js/home/add_sub_remove.js' %}"></script>
 <script src="{% static 'js/order/order_modal.js' %}"></script>
@@ -81,9 +81,11 @@
                 method: 'POST',
                 headers: { "X-CSRFToken": '{{csrf_token}}' },
                 data: $(ev.target).serialize()+ '&pk=' + pk,
-                success: (data) => {
-                    console.log(data)
-                    console.log($(ev.target).find('textarea[name="user_comment"]').html(data.user_comment))
+                success: (req) => {
+                    $(`div[data-order-id="${pk}"] .order-comment span`).html(req.order_comment)
+                    $(`div[data-order-id="${pk}"] .order-cab`).html(req.order_cab.fields.num)
+                    $(`div[data-order-id="${pk}"] .order-time span`).html(req.order_time)
+                   
                 }
             }
 
