--- a/apt_delivery_app/templates/order/elements/order_modal.html
+++ b/apt_delivery_app/templates/order/elements/order_modal.html
@@ -49,14 +49,12 @@
             </div>
             {% endif%}
             <div class="col-12">
-                {% if order.user_comment %}
-                <p>Ваш комментарий: {{order.user_comment}}</p>
-                {% endif %}
-                {% if order.result %}
+                <p class="order-comment">{% if order.user_comment %}Ваш комментарий: <span>{{order.user_comment}}</span>{% endif %}</p>
                 <p>
+                    {% if order.result %}
                     Причина отмены:{{order.result}}
+                    {% endif %}
                 </p>
-                {% endif %}
             </div>
         </div>
 
